apps/argo-cd/overlays/rancher/repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      serviceAccountName: argocd-repo-server
      containers:
      - name: argocd-repo-server
