apps/argo-cd/overlays/rancher/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command:
          - argocd-server
          - --staticassets
          - /shared/app
          - --insecure
          - --enable-gzip
